windows high contrast compatibility review:   - tag component has outline   - notification panels have outline   - highlighted text is visible on autocomplete suggestions   - highlight marker is visible on autocomplete suggestions   - card links have an outline   - details component "arrow" indicator renders correctly

--- a/src/base/core/links/_links.scss
+++ b/src/base/core/links/_links.scss
@@ -18,6 +18,7 @@ a,
     min-height: 0;
     min-width: 0;
     padding: 0;
+    text-align: left; // .ds_link applied to a button would otherwise have centered text
 }
 
 .ds_reversed {
