--- a/src/base/helpers/high-contrast/_high-contrast.scss
+++ b/src/base/helpers/high-contrast/_high-contrast.scss
@@ -11,3 +11,10 @@
         @content;
     }
 }
+
+@mixin ds_high-contrast-outline($width: 2px) {
+    @media screen and (forced-colors: active) and (prefers-contrast: more) {
+        outline: $width solid highlight !important;
+        outline-offset: #{$width * -1} !important;
+    }
+}
